# Quclaw

./: .gitignore  AGENTS.md  README.md  current_goal.md  pyproject.toml  resignation-scenario-spec-v4.md
default_workspace/: AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  config.example.json  config.example.yaml  pending_sources.json
default_workspace/cases/: RES-6D56FD6F.json
docs/: resignation-scenario-implementation.md
src/channel/: base.py  cli_channel.py  discord_channel.py  feishu_channel.py  telegram_channel.py
src/cli/: chat.py  main.py  server.py
src/core/: agent.py  agent_loader.py  context.py  context_guard.py  cron_loader.py  eventbus.py  events.py  history.py  prompt_builder.py  routing.py  session_state.py  skill_loader.py
src/runtime/: eventbus.py  events.py  media.py
src/scenario/: README.md  effects.py  model.py  orchestrator.py  rules.py  state.py  store.py  views.py
src/server/: agent_worker.py  app.py  channel_worker.py  cron_worker.py  delivery_worker.py  heartbeat_worker.py  server.py  websocket_worker.py  worker.py
src/tools/: attach_file_tool.py  base.py  builtin_tools.py  post_message_tool.py  registry.py  scenario_notify_tool.py  scenario_tool.py  (+4 more)
tests/: test_agent_tool_registration.py  test_agent_worker_concurrency.py  test_cli_channel_pipeline.py  test_config_runtime_sources.py  test_delivery_worker_retry.py  test_heartbeat.py  test_post_message_tool.py  test_prompt_builder.py  test_resignation_cron.py  test_scenario.py  test_scenario_tool.py  test_server_websocket_reload.py  test_subagent_tool.py  test_websocket_worker.py
(+36 files in other folders)
